--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,3 +29,21 @@ h3{
 p{
     font-size: 15px;
 }
+
+#notes {
+    float: right;
+    width: 100%;
+  }
+  textarea, input {
+    display: block;
+    width: 100%;
+    background-color: white;
+  }
+  input {
+    height: 36px;
+    font-size: 24px;
+  }
+  textarea {
+    height: 200px;
+    font-size: 18px;
+  }
